# JJEngine

./: .gitignore  .gitmodules  CMakeLists.txt
JJEngine/: CMakeLists.txt  JJEngine.cpp  JJEngine.h
JJEngine.Tests/: CMakeLists.txt
JJEngine.Tests/Example/: CMakeLists.txt  main.cpp
JJEngine/include/: JJEngine.h
JJEngine/include/Graphics/: Window.h
JJEngine/include/JJEngine/: Application.h  JJEngine.h  Shader.h  Window.h
JJEngine/src/: Application.cpp  Shader.cpp  Window.cpp
JJEngine/src/Graphics/: Window.cpp
TestApp/: CMakeLists.txt
TestApp/assets/shaders/: flatColor.frag  flatColor.vert
TestApp/src/: TestApp.cpp
